compiler/w_session/tests/errors/duplicate-variables.w
fn main() {
    let foo = 1;
    let foo = 2;
}