compiler/w_session/tests/errors/duplicate-variables.stderr
tests/errors/duplicate-variables.w:3:9: error: identifier already defined
    let foo = 2;
        ^^^
